# ferris-keymap-visualizer

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  key.rs  keycode.rs  keymap.rs  main.rs  svg_mod.rs
