[package]
name = "ferris-keymap-visualizer"
authors = ["Pyxels"]
version = "0.3.0"
edition = "2021"
description = "Generate an SVG based on a keymap for the ferris sweep."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "3.1", features = ["derive"] }
